brain UI functional

--- a/instructions/02.5-agent-creator (COMPLETE).md
+++ b/instructions/02.5-agent-creator (COMPLETE).md
@@ -1,4 +1,10 @@
-# 02.5 — Agent Creator spec
+# 02.5 — Agent Creator spec (COMPLETE)
+
+> **STATUS: COMPLETE**
+>
+> All functionality implemented: + button, inline creator form, live sprite preview, API integration.
+>
+> **Note:** `docs/FRONTEND-LAYOUT.md` states "No 'add agent' in the app—agents appear when they connect." This contradicts the implemented feature. The docs should be updated to reflect that agents can now be manually created in the webapp.
 
 **Scope:** Add a character creator to the left sidebar. Users click a + button in the sidebar header to open an inline creator form with a live-morphing sprite preview. The creator uses only a name field; personality is edited later via the Soul button.
 
